--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -13,17 +13,61 @@ header {
     margin: 0;
 }
 
+p {
+    margin: 0;
+    padding: 0;
+}
+
 .title-main {
     font-size: 30px;
 }
 
-.welcome-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
 main {
+    display: flex;
+    flex-direction: column;
     padding: 0;
     margin: 0;
+    height: 100vh;
 }
+
+.welcome-container,
+.login-reg-container {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    background-color: aqua;
+    margin: 2rem;
+    height: 10rem;
+    border-radius: 20px;
+}
+
+.welcome-info {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    flex-direction: column;
+    background-color: aliceblue;
+    padding: 2rem;
+    border-radius: 20px;
+}
+
+.welcome-title {
+    font-size: 1.5rem;
+    font-weight: bold;
+    margin-bottom: 1rem;
+}
+
+.login-container,
+.register-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    background-color: aliceblue;
+}
+
+.sub-title {
+    font-weight: bold;
+    font-size: 1.25rem;
+}
+
