--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -37,7 +37,7 @@ main {
     align-items: center;
     background-color: aqua;
     margin: 2rem;
-    height: 10rem;
+    padding: 1rem;
     border-radius: 20px;
 }
 
@@ -64,6 +64,7 @@ main {
     justify-content: space-between;
     align-items: center;
     background-color: aliceblue;
+    border-radius: 20px;
 }
 
 .sub-title {
